parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EXIT
    READ
    REVALUAR

Grammar

Rule 0     S' -> init
Rule 1     init -> MAIN DOSPUNTOS instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> asignacion
Rule 5     instruccion -> array_instr
Rule 6     instruccion -> print_instr
Rule 7     instruccion -> unset_instr
Rule 8     instruccion -> if_instr
Rule 9     instruccion -> etiqueta_instr
Rule 10    instruccion -> goto_instr
Rule 11    array_instr -> VAR indices IGUAL exp_numerica PTCOMA
Rule 12    indices -> indices indice
Rule 13    indices -> indice
Rule 14    indice -> CORIZQ exp_numerica CORDER
Rule 15    asignacion -> VAR IGUAL exp_numerica PTCOMA
Rule 16    exp_numerica -> exp_numerica MAS exp_numerica
Rule 17    exp_numerica -> exp_numerica MENOS exp_numerica
Rule 18    exp_numerica -> exp_numerica POR exp_numerica
Rule 19    exp_numerica -> exp_numerica DIVIDIDO exp_numerica
Rule 20    exp_numerica -> exp_numerica RESIDUO exp_numerica
Rule 21    exp_numerica -> exp_numerica AND exp_numerica
Rule 22    exp_numerica -> exp_numerica OR exp_numerica
Rule 23    exp_numerica -> exp_numerica XOR exp_numerica
Rule 24    exp_numerica -> exp_numerica BAND exp_numerica
Rule 25    exp_numerica -> exp_numerica BOR exp_numerica
Rule 26    exp_numerica -> exp_numerica BXOR exp_numerica
Rule 27    exp_numerica -> exp_numerica SHIFTI exp_numerica
Rule 28    exp_numerica -> exp_numerica SHIFTD exp_numerica
Rule 29    exp_numerica -> exp_numerica IGUALQ exp_numerica
Rule 30    exp_numerica -> exp_numerica NIGUALQ exp_numerica
Rule 31    exp_numerica -> exp_numerica MAYORQ exp_numerica
Rule 32    exp_numerica -> exp_numerica MENORQ exp_numerica
Rule 33    exp_numerica -> exp_numerica MAYORIGUALQ exp_numerica
Rule 34    exp_numerica -> exp_numerica MENORIGUALQ exp_numerica
Rule 35    exp_numerica -> PARIZQ tipo_dato PARDER VAR
Rule 36    exp_numerica -> MENOS exp_numerica
Rule 37    exp_numerica -> NOT exp_numerica
Rule 38    exp_numerica -> BNOT exp_numerica
Rule 39    exp_numerica -> ABS PARIZQ exp_numerica PARDER
Rule 40    exp_numerica -> ENTERO
Rule 41    exp_numerica -> DECIMAL
Rule 42    exp_numerica -> VAR
Rule 43    exp_numerica -> VAR indices
Rule 44    exp_numerica -> CADENA
Rule 45    exp_numerica -> ARRAY PARIZQ PARDER
Rule 46    tipo_dato -> INT
Rule 47    tipo_dato -> FLOAT
Rule 48    tipo_dato -> CHAR
Rule 49    print_instr -> PRINT PARIZQ exp_numerica PARDER PTCOMA
Rule 50    unset_instr -> UNSET PARIZQ exp_numerica PARDER PTCOMA
Rule 51    if_instr -> IF PARIZQ exp_numerica PARDER goto_instr
Rule 52    etiqueta_instr -> ID DOSPUNTOS
Rule 53    goto_instr -> GOTO ID PTCOMA

Terminals, with rules where they appear

ABS                  : 39
AND                  : 21
ARRAY                : 45
BAND                 : 24
BNOT                 : 38
BOR                  : 25
BXOR                 : 26
CADENA               : 44
CHAR                 : 48
CORDER               : 14
CORIZQ               : 14
DECIMAL              : 41
DIVIDIDO             : 19
DOSPUNTOS            : 1 52
ENTERO               : 40
EXIT                 : 
FLOAT                : 47
GOTO                 : 53
ID                   : 52 53
IF                   : 51
IGUAL                : 11 15
IGUALQ               : 29
INT                  : 46
MAIN                 : 1
MAS                  : 16
MAYORIGUALQ          : 33
MAYORQ               : 31
MENORIGUALQ          : 34
MENORQ               : 32
MENOS                : 17 36
NIGUALQ              : 30
NOT                  : 37
OR                   : 22
PARDER               : 35 39 45 49 50 51
PARIZQ               : 35 39 45 49 50 51
POR                  : 18
PRINT                : 49
PTCOMA               : 11 15 49 50 53
READ                 : 
RESIDUO              : 20
REVALUAR             : 
SHIFTD               : 28
SHIFTI               : 27
UNSET                : 50
VAR                  : 11 15 35 42 43
XOR                  : 23
error                : 

Nonterminals, with rules where they appear

array_instr          : 5
asignacion           : 4
etiqueta_instr       : 9
exp_numerica         : 11 14 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 36 37 38 39 49 50 51
goto_instr           : 10 51
if_instr             : 8
indice               : 12 13
indices              : 11 12 43
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
print_instr          : 6
tipo_dato            : 35
unset_instr          : 7

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . MAIN DOSPUNTOS instrucciones

    MAIN            shift and go to state 2

    init                           shift and go to state 1

state 1

    (0) S' -> init .



state 2

    (1) init -> MAIN . DOSPUNTOS instrucciones

    DOSPUNTOS       shift and go to state 3


state 3

    (1) init -> MAIN DOSPUNTOS . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . asignacion
    (5) instruccion -> . array_instr
    (6) instruccion -> . print_instr
    (7) instruccion -> . unset_instr
    (8) instruccion -> . if_instr
    (9) instruccion -> . etiqueta_instr
    (10) instruccion -> . goto_instr
    (15) asignacion -> . VAR IGUAL exp_numerica PTCOMA
    (11) array_instr -> . VAR indices IGUAL exp_numerica PTCOMA
    (49) print_instr -> . PRINT PARIZQ exp_numerica PARDER PTCOMA
    (50) unset_instr -> . UNSET PARIZQ exp_numerica PARDER PTCOMA
    (51) if_instr -> . IF PARIZQ exp_numerica PARDER goto_instr
    (52) etiqueta_instr -> . ID DOSPUNTOS
    (53) goto_instr -> . GOTO ID PTCOMA

    VAR             shift and go to state 13
    PRINT           shift and go to state 14
    UNSET           shift and go to state 15
    IF              shift and go to state 16
    ID              shift and go to state 17
    GOTO            shift and go to state 18

    instrucciones                  shift and go to state 4
    instruccion                    shift and go to state 5
    asignacion                     shift and go to state 6
    array_instr                    shift and go to state 7
    print_instr                    shift and go to state 8
    unset_instr                    shift and go to state 9
    if_instr                       shift and go to state 10
    etiqueta_instr                 shift and go to state 11
    goto_instr                     shift and go to state 12

state 4

    (1) init -> MAIN DOSPUNTOS instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . asignacion
    (5) instruccion -> . array_instr
    (6) instruccion -> . print_instr
    (7) instruccion -> . unset_instr
    (8) instruccion -> . if_instr
    (9) instruccion -> . etiqueta_instr
    (10) instruccion -> . goto_instr
    (15) asignacion -> . VAR IGUAL exp_numerica PTCOMA
    (11) array_instr -> . VAR indices IGUAL exp_numerica PTCOMA
    (49) print_instr -> . PRINT PARIZQ exp_numerica PARDER PTCOMA
    (50) unset_instr -> . UNSET PARIZQ exp_numerica PARDER PTCOMA
    (51) if_instr -> . IF PARIZQ exp_numerica PARDER goto_instr
    (52) etiqueta_instr -> . ID DOSPUNTOS
    (53) goto_instr -> . GOTO ID PTCOMA

    $end            reduce using rule 1 (init -> MAIN DOSPUNTOS instrucciones .)
    VAR             shift and go to state 13
    PRINT           shift and go to state 14
    UNSET           shift and go to state 15
    IF              shift and go to state 16
    ID              shift and go to state 17
    GOTO            shift and go to state 18

    instruccion                    shift and go to state 19
    asignacion                     shift and go to state 6
    array_instr                    shift and go to state 7
    print_instr                    shift and go to state 8
    unset_instr                    shift and go to state 9
    if_instr                       shift and go to state 10
    etiqueta_instr                 shift and go to state 11
    goto_instr                     shift and go to state 12

state 5

    (3) instrucciones -> instruccion .

    VAR             reduce using rule 3 (instrucciones -> instruccion .)
    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    UNSET           reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    GOTO            reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 6

    (4) instruccion -> asignacion .

    VAR             reduce using rule 4 (instruccion -> asignacion .)
    PRINT           reduce using rule 4 (instruccion -> asignacion .)
    UNSET           reduce using rule 4 (instruccion -> asignacion .)
    IF              reduce using rule 4 (instruccion -> asignacion .)
    ID              reduce using rule 4 (instruccion -> asignacion .)
    GOTO            reduce using rule 4 (instruccion -> asignacion .)
    $end            reduce using rule 4 (instruccion -> asignacion .)


state 7

    (5) instruccion -> array_instr .

    VAR             reduce using rule 5 (instruccion -> array_instr .)
    PRINT           reduce using rule 5 (instruccion -> array_instr .)
    UNSET           reduce using rule 5 (instruccion -> array_instr .)
    IF              reduce using rule 5 (instruccion -> array_instr .)
    ID              reduce using rule 5 (instruccion -> array_instr .)
    GOTO            reduce using rule 5 (instruccion -> array_instr .)
    $end            reduce using rule 5 (instruccion -> array_instr .)


state 8

    (6) instruccion -> print_instr .

    VAR             reduce using rule 6 (instruccion -> print_instr .)
    PRINT           reduce using rule 6 (instruccion -> print_instr .)
    UNSET           reduce using rule 6 (instruccion -> print_instr .)
    IF              reduce using rule 6 (instruccion -> print_instr .)
    ID              reduce using rule 6 (instruccion -> print_instr .)
    GOTO            reduce using rule 6 (instruccion -> print_instr .)
    $end            reduce using rule 6 (instruccion -> print_instr .)


state 9

    (7) instruccion -> unset_instr .

    VAR             reduce using rule 7 (instruccion -> unset_instr .)
    PRINT           reduce using rule 7 (instruccion -> unset_instr .)
    UNSET           reduce using rule 7 (instruccion -> unset_instr .)
    IF              reduce using rule 7 (instruccion -> unset_instr .)
    ID              reduce using rule 7 (instruccion -> unset_instr .)
    GOTO            reduce using rule 7 (instruccion -> unset_instr .)
    $end            reduce using rule 7 (instruccion -> unset_instr .)


state 10

    (8) instruccion -> if_instr .

    VAR             reduce using rule 8 (instruccion -> if_instr .)
    PRINT           reduce using rule 8 (instruccion -> if_instr .)
    UNSET           reduce using rule 8 (instruccion -> if_instr .)
    IF              reduce using rule 8 (instruccion -> if_instr .)
    ID              reduce using rule 8 (instruccion -> if_instr .)
    GOTO            reduce using rule 8 (instruccion -> if_instr .)
    $end            reduce using rule 8 (instruccion -> if_instr .)


state 11

    (9) instruccion -> etiqueta_instr .

    VAR             reduce using rule 9 (instruccion -> etiqueta_instr .)
    PRINT           reduce using rule 9 (instruccion -> etiqueta_instr .)
    UNSET           reduce using rule 9 (instruccion -> etiqueta_instr .)
    IF              reduce using rule 9 (instruccion -> etiqueta_instr .)
    ID              reduce using rule 9 (instruccion -> etiqueta_instr .)
    GOTO            reduce using rule 9 (instruccion -> etiqueta_instr .)
    $end            reduce using rule 9 (instruccion -> etiqueta_instr .)


state 12

    (10) instruccion -> goto_instr .

    VAR             reduce using rule 10 (instruccion -> goto_instr .)
    PRINT           reduce using rule 10 (instruccion -> goto_instr .)
    UNSET           reduce using rule 10 (instruccion -> goto_instr .)
    IF              reduce using rule 10 (instruccion -> goto_instr .)
    ID              reduce using rule 10 (instruccion -> goto_instr .)
    GOTO            reduce using rule 10 (instruccion -> goto_instr .)
    $end            reduce using rule 10 (instruccion -> goto_instr .)


state 13

    (15) asignacion -> VAR . IGUAL exp_numerica PTCOMA
    (11) array_instr -> VAR . indices IGUAL exp_numerica PTCOMA
    (12) indices -> . indices indice
    (13) indices -> . indice
    (14) indice -> . CORIZQ exp_numerica CORDER

    IGUAL           shift and go to state 20
    CORIZQ          shift and go to state 23

    indices                        shift and go to state 21
    indice                         shift and go to state 22

state 14

    (49) print_instr -> PRINT . PARIZQ exp_numerica PARDER PTCOMA

    PARIZQ          shift and go to state 24


state 15

    (50) unset_instr -> UNSET . PARIZQ exp_numerica PARDER PTCOMA

    PARIZQ          shift and go to state 25


state 16

    (51) if_instr -> IF . PARIZQ exp_numerica PARDER goto_instr

    PARIZQ          shift and go to state 26


state 17

    (52) etiqueta_instr -> ID . DOSPUNTOS

    DOSPUNTOS       shift and go to state 27


state 18

    (53) goto_instr -> GOTO . ID PTCOMA

    ID              shift and go to state 28


state 19

    (2) instrucciones -> instrucciones instruccion .

    VAR             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    PRINT           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    UNSET           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    GOTO            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 20

    (15) asignacion -> VAR IGUAL . exp_numerica PTCOMA
    (16) exp_numerica -> . exp_numerica MAS exp_numerica
    (17) exp_numerica -> . exp_numerica MENOS exp_numerica
    (18) exp_numerica -> . exp_numerica POR exp_numerica
    (19) exp_numerica -> . exp_numerica DIVIDIDO exp_numerica
    (20) exp_numerica -> . exp_numerica RESIDUO exp_numerica
    (21) exp_numerica -> . exp_numerica AND exp_numerica
    (22) exp_numerica -> . exp_numerica OR exp_numerica
    (23) exp_numerica -> . exp_numerica XOR exp_numerica
    (24) exp_numerica -> . exp_numerica BAND exp_numerica
    (25) exp_numerica -> . exp_numerica BOR exp_numerica
    (26) exp_numerica -> . exp_numerica BXOR exp_numerica
    (27) exp_numerica -> . exp_numerica SHIFTI exp_numerica
    (28) exp_numerica -> . exp_numerica SHIFTD exp_numerica
    (29) exp_numerica -> . exp_numerica IGUALQ exp_numerica
    (30) exp_numerica -> . exp_numerica NIGUALQ exp_numerica
    (31) exp_numerica -> . exp_numerica MAYORQ exp_numerica
    (32) exp_numerica -> . exp_numerica MENORQ exp_numerica
    (33) exp_numerica -> . exp_numerica MAYORIGUALQ exp_numerica
    (34) exp_numerica -> . exp_numerica MENORIGUALQ exp_numerica
    (35) exp_numerica -> . PARIZQ tipo_dato PARDER VAR
    (36) exp_numerica -> . MENOS exp_numerica
    (37) exp_numerica -> . NOT exp_numerica
    (38) exp_numerica -> . BNOT exp_numerica
    (39) exp_numerica -> . ABS PARIZQ exp_numerica PARDER
    (40) exp_numerica -> . ENTERO
    (41) exp_numerica -> . DECIMAL
    (42) exp_numerica -> . VAR
    (43) exp_numerica -> . VAR indices
    (44) exp_numerica -> . CADENA
    (45) exp_numerica -> . ARRAY PARIZQ PARDER

    PARIZQ          shift and go to state 32
    MENOS           shift and go to state 31
    NOT             shift and go to state 33
    BNOT            shift and go to state 34
    ABS             shift and go to state 35
    ENTERO          shift and go to state 36
    DECIMAL         shift and go to state 37
    VAR             shift and go to state 29
    CADENA          shift and go to state 38
    ARRAY           shift and go to state 39

    exp_numerica                   shift and go to state 30

state 21

    (11) array_instr -> VAR indices . IGUAL exp_numerica PTCOMA
    (12) indices -> indices . indice
    (14) indice -> . CORIZQ exp_numerica CORDER

    IGUAL           shift and go to state 40
    CORIZQ          shift and go to state 23

    indice                         shift and go to state 41

state 22

    (13) indices -> indice .

    IGUAL           reduce using rule 13 (indices -> indice .)
    CORIZQ          reduce using rule 13 (indices -> indice .)
    PTCOMA          reduce using rule 13 (indices -> indice .)
    MAS             reduce using rule 13 (indices -> indice .)
    MENOS           reduce using rule 13 (indices -> indice .)
    POR             reduce using rule 13 (indices -> indice .)
    DIVIDIDO        reduce using rule 13 (indices -> indice .)
    RESIDUO         reduce using rule 13 (indices -> indice .)
    AND             reduce using rule 13 (indices -> indice .)
    OR              reduce using rule 13 (indices -> indice .)
    XOR             reduce using rule 13 (indices -> indice .)
    BAND            reduce using rule 13 (indices -> indice .)
    BOR             reduce using rule 13 (indices -> indice .)
    BXOR            reduce using rule 13 (indices -> indice .)
    SHIFTI          reduce using rule 13 (indices -> indice .)
    SHIFTD          reduce using rule 13 (indices -> indice .)
    IGUALQ          reduce using rule 13 (indices -> indice .)
    NIGUALQ         reduce using rule 13 (indices -> indice .)
    MAYORQ          reduce using rule 13 (indices -> indice .)
    MENORQ          reduce using rule 13 (indices -> indice .)
    MAYORIGUALQ     reduce using rule 13 (indices -> indice .)
    MENORIGUALQ     reduce using rule 13 (indices -> indice .)
    CORDER          reduce using rule 13 (indices -> indice .)
    PARDER          reduce using rule 13 (indices -> indice .)


state 23

    (14) indice -> CORIZQ . exp_numerica CORDER
    (16) exp_numerica -> . exp_numerica MAS exp_numerica
    (17) exp_numerica -> . exp_numerica MENOS exp_numerica
    (18) exp_numerica -> . exp_numerica POR exp_numerica
    (19) exp_numerica -> . exp_numerica DIVIDIDO exp_numerica
    (20) exp_numerica -> . exp_numerica RESIDUO exp_numerica
    (21) exp_numerica -> . exp_numerica AND exp_numerica
    (22) exp_numerica -> . exp_numerica OR exp_numerica
    (23) exp_numerica -> . exp_numerica XOR exp_numerica
    (24) exp_numerica -> . exp_numerica BAND exp_numerica
    (25) exp_numerica -> . exp_numerica BOR exp_numerica
    (26) exp_numerica -> . exp_numerica BXOR exp_numerica
    (27) exp_numerica -> . exp_numerica SHIFTI exp_numerica
    (28) exp_numerica -> . exp_numerica SHIFTD exp_numerica
    (29) exp_numerica -> . exp_numerica IGUALQ exp_numerica
    (30) exp_numerica -> . exp_numerica NIGUALQ exp_numerica
    (31) exp_numerica -> . exp_numerica MAYORQ exp_numerica
    (32) exp_numerica -> . exp_numerica MENORQ exp_numerica
    (33) exp_numerica -> . exp_numerica MAYORIGUALQ exp_numerica
    (34) exp_numerica -> . exp_numerica MENORIGUALQ exp_numerica
    (35) exp_numerica -> . PARIZQ tipo_dato PARDER VAR
    (36) exp_numerica -> . MENOS exp_numerica
    (37) exp_numerica -> . NOT exp_numerica
    (38) exp_numerica -> . BNOT exp_numerica
    (39) exp_numerica -> . ABS PARIZQ exp_numerica PARDER
    (40) exp_numerica -> . ENTERO
    (41) exp_numerica -> . DECIMAL
    (42) exp_numerica -> . VAR
    (43) exp_numerica -> . VAR indices
    (44) exp_numerica -> . CADENA
    (45) exp_numerica -> . ARRAY PARIZQ PARDER
